Remove `pre` padding from screen.css to fix prismjs alignment

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -988,7 +988,6 @@ Usage (In Ghost editor):
 .post-full-content pre {
     overflow-x: auto;
     margin: 1.5em 0 3em;
-    padding: 20px;
     min-width: unset;
     max-width: 100%;
     border: 2px solid rgba(212,218,222,.1);
